[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27"]

[project]
name = "kumabroadcast"
version = "0.1.0"
description = "Scrapes Uptime Kuma status pages and publishes incidents & maintenance to Discord via webhooks"
readme = "README.md"
keywords = ["discord", "scraping", "uptime-kuma", "webhook"]
authors = [
  { name = "Jean Serrano", email = "jean@ourpxi.dev" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["requests>=2.32"]

[project.urls]
Homepage = "https://github.com/ourpxi/KumaBroadcast"
Repository = "https://github.com/ourpxi/KumaBroadcast.git"
Issues = "https://github.com/ourpxi/KumaBroadcast/issues"

[project.scripts]
kumabroadcast = "kumabroadcast.kumabroadcast:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kumabroadcast"]

[tool.ruff]
target-version = "py310"
line-length = 88
